test/modules/standard/FileSystem/fsouza/isdir/no_such_file_or_dir.good
no_such_file_or_dir.chpl:2: error: No such file or directory in isDir with path "unknown.txt"
