test/modules/standard/FileSystem/fsouza/isdir/no_such_file_or_dir.chpl
use FileSystem;
writeln(isDir("unknown.txt"));
